--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
         "@types/jasmine": "^3.10.3",
         "@types/node": "^17.0.18",
         "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.12.1",
+        "@typescript-eslint/parser": "^5.12.1",
         "eslint": "^8.9.0",
         "eslint-config-prettier": "^8.4.0",
         "eslint-plugin-prettier": "^4.0.0",
