--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     },
     "dependencies": {
         "axios": "^0.26.0",
+        "ejs": "^3.1.6",
         "express": "^4.17.3",
         "sharp": "^0.30.1"
     }
