--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "test": "npm run build && npm run jasmine"
     },
     "author": "",
-    "license": "ISC",
+    "license": "GPL",
     "devDependencies": {
         "@types/express": "^4.17.13",
         "@types/jasmine": "^3.10.3",
